--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Order Form</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    
 </head>
 <body>
-    <select>
+    <select id="dropdown">
         <option>Options</option>
         <option value = "bag">R2D2 Bag</option>
         <option value = "banana">Banana Slicer</option>
@@ -32,5 +32,6 @@
         <option value = "water-can">Watering Can't</option>
         <option value = "wine-glass">Pythagorean Wine Glass</option>
     </select>
+    <script src="js/app.js"></script>
 </body>
 </html>
