pushing what I have

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <select id="dropdown">
+    <select id="product">
         <option>Options</option>
         <option value = "bag">R2D2 Bag</option>
         <option value = "banana">Banana Slicer</option>
@@ -32,6 +32,11 @@
         <option value = "water-can">Watering Can't</option>
         <option value = "wine-glass">Pythagorean Wine Glass</option>
     </select>
+    <form>
+        Quantity:
+        <input type = "text" id = "qty">
+    </form>
+        <input type = "submit" id = "submit" value = "$">
     <script src="js/app.js"></script>
 </body>
 </html>
